[gd_scene load_steps=6 format=3 uid="uid://bv5yuj6uamm0r"]

[ext_resource type="Script" uid="uid://biafanqqwgdmi" path="res://scripts/game_master.gd" id="1_5dhe3"]
[ext_resource type="PackedScene" uid="uid://cc1cxfs802qfu" path="res://scenes/play_area.tscn" id="2_i2urk"]
[ext_resource type="PackedScene" uid="uid://vetlc7vmek3w" path="res://scenes/item_queue.tscn" id="3_mr75u"]
[ext_resource type="PackedScene" uid="uid://bli7pgx48hea7" path="res://scenes/score_display.tscn" id="4_hital"]
[ext_resource type="Texture2D" uid="uid://bl7yt3il30pgr" path="res://images/background.png" id="5_mr75u"]

[node name="GameMaster" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5dhe3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_mr75u")

[node name="PlayArea" parent="." instance=ExtResource("2_i2urk")]
layout_mode = 1

[node name="ItemQueue" parent="." instance=ExtResource("3_mr75u")]
layout_mode = 1

[node name="ScoreDisplay" parent="." instance=ExtResource("4_hital")]
